// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardForm test cancel called 1`] = `
<div
  className="cardrow"
>
  <div>
    SOME ID
  </div>
  <input
    name="name"
    onChange={[Function]}
    value=""
  />
  <input
    name="cardNumber"
    onChange={[Function]}
    value=""
  />
  <input
    name="quota"
    onChange={[Function]}
    type="number"
    value={0}
  />
  <input
    name="balance"
    onChange={[Function]}
    type="number"
    value={0}
  />
  <input
    max={31}
    min={1}
    name="cutoffDay"
    onChange={[Function]}
    type="number"
    value={1}
  />
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Update
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`CardForm test save called 1`] = `
<div
  className="cardrow"
>
  <div>
    A-U-U-ID-S
  </div>
  <input
    name="name"
    onChange={[Function]}
    value=""
  />
  <input
    name="cardNumber"
    onChange={[Function]}
    value=""
  />
  <input
    name="quota"
    onChange={[Function]}
    type="number"
    value={0}
  />
  <input
    name="balance"
    onChange={[Function]}
    type="number"
    value={0}
  />
  <input
    max={31}
    min={1}
    name="cutoffDay"
    onChange={[Function]}
    type="number"
    value={1}
  />
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Create
    </button>
  </div>
</div>
`;

exports[`CardForm test save called 2`] = `
<div
  className="cardrow"
>
  <div>
    SOME ID
  </div>
  <input
    name="name"
    onChange={[Function]}
    value="NAME"
  />
  <input
    name="cardNumber"
    onChange={[Function]}
    value="cardNumber"
  />
  <input
    name="quota"
    onChange={[Function]}
    type="number"
    value={2}
  />
  <input
    name="balance"
    onChange={[Function]}
    type="number"
    value={1}
  />
  <input
    max={31}
    min={1}
    name="cutoffDay"
    onChange={[Function]}
    type="number"
    value={1}
  />
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Update
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`CardForm test setValue called for number field 1`] = `
<div
  className="cardrow"
>
  <div>
    SOME ID
  </div>
  <input
    name="name"
    onChange={[Function]}
    value="NAME"
  />
  <input
    name="cardNumber"
    onChange={[Function]}
    value="cardNumber"
  />
  <input
    name="quota"
    onChange={[Function]}
    type="number"
    value={2}
  />
  <input
    name="balance"
    onChange={[Function]}
    type="number"
    value={1}
  />
  <input
    max={31}
    min={1}
    name="cutoffDay"
    onChange={[Function]}
    type="number"
    value={1}
  />
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Update
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`CardForm test setValue called for number field with invalid value 1`] = `
<div
  className="cardrow"
>
  <div>
    SOME ID
  </div>
  <input
    name="name"
    onChange={[Function]}
    value="NAME"
  />
  <input
    name="cardNumber"
    onChange={[Function]}
    value="cardNumber"
  />
  <input
    name="quota"
    onChange={[Function]}
    type="number"
    value={2}
  />
  <input
    name="balance"
    onChange={[Function]}
    type="number"
    value={1}
  />
  <input
    max={31}
    min={1}
    name="cutoffDay"
    onChange={[Function]}
    type="number"
    value={1}
  />
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Update
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`CardForm test setValue called for text field 1`] = `
<div
  className="cardrow"
>
  <div>
    SOME ID
  </div>
  <input
    name="name"
    onChange={[Function]}
    value="NAME"
  />
  <input
    name="cardNumber"
    onChange={[Function]}
    value="cardNumber"
  />
  <input
    name="quota"
    onChange={[Function]}
    type="number"
    value={1}
  />
  <input
    name="balance"
    onChange={[Function]}
    type="number"
    value={1}
  />
  <input
    max={31}
    min={1}
    name="cutoffDay"
    onChange={[Function]}
    type="number"
    value={1}
  />
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Update
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`CardForm test should render 1`] = `
<div
  className="cardrow"
>
  <div>
    A-U-U-ID-S
  </div>
  <input
    name="name"
    onChange={[Function]}
    value=""
  />
  <input
    name="cardNumber"
    onChange={[Function]}
    value=""
  />
  <input
    name="quota"
    onChange={[Function]}
    type="number"
    value={0}
  />
  <input
    name="balance"
    onChange={[Function]}
    type="number"
    value={0}
  />
  <input
    max={31}
    min={1}
    name="cutoffDay"
    onChange={[Function]}
    type="number"
    value={1}
  />
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Create
    </button>
  </div>
</div>
`;

exports[`CardForm test should render with card 1`] = `
<div
  className="cardrow"
>
  <div>
    SOME ID
  </div>
  <input
    name="name"
    onChange={[Function]}
    value="name"
  />
  <input
    name="cardNumber"
    onChange={[Function]}
    value="cardNumber"
  />
  <input
    name="quota"
    onChange={[Function]}
    type="number"
    value={1}
  />
  <input
    name="balance"
    onChange={[Function]}
    type="number"
    value={1}
  />
  <input
    max={31}
    min={1}
    name="cutoffDay"
    onChange={[Function]}
    type="number"
    value={1}
  />
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Update
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;
